# cpp_personal_task1

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  input.c  input.h  main.c  post.c  post.h  test.txt  tests.c  tests.h  tests_gtest.cpp
PT1/: CMakeLists.txt  input.c
PT2/: CMakeLists.txt  create_test.py  create_test_file.py  input.c  input.h  main.c  matrix.c  matrix.h  parallel_matrix.c  parallel_matrix.h  test_gtest.cpp  test_input.cpp
